verify/tests/cases/errors/duplicate_const.b
REM Test: Duplicate CONST name (should fail)
CONST MAX = 100
CONST MAX = 200
PRINT MAX
